Fix broken links
github pages serve is case sensitive.

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -576,13 +576,10 @@
 <p class="itemText"><p class="p1"><span class="s1">OSHA regulations require that respirators shall be used in the following circum...</p>
 </li>
 <li>
-<p class="itemTitle">Types of Respirators</p>
-<p class="itemText">OSHA divides respirators into two categories:</p>
-</li>
-<li>
-<p class="itemTitle">Air-purifying Respirators</p>
-<p class="itemText">&lt;figure xml:id="fig_masks"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Air-purifying respirators &lt;/caption&gt;</span></p></p>
+<p class="folderTitle">Air-purifying Respirators</p>
+<p class="itemText"></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_masks"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Air-purifiying respirators<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;sidebyside width ="25%" valign="middle"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;image<span class="Apple-converted-space">  </span>source="images/mask2.png"/&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;image<span class="Apple-converted-space">  </span>source="images/mask3.png"/&gt;</span></p></p>
@@ -590,17 +587,11 @@
 <p class="itemText"><p class="p1"><span class="s1">&lt;/sidebyside&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_glovesc"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Air-purifiying respirators<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;sidebyside width ="25%" valign="middle"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;image<span class="Apple-converted-space">  </span>source="images/mask2.png"/&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;image<span class="Apple-converted-space">  </span>source="images/mask3.png"/&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;image<span class="Apple-converted-space">  </span>source="images/mask1.png"/&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;/sidebyside&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;/figur...</p>
+<p class="itemText"><p class="p1"><span class="s1">These units have filters, cartridges, or canisters that remove contaminants from the air by passing the air through the air-purifying element before it reaches the user. Air purifying respirators are further divided into: &lt;ul&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Particulate Respirat...</p>
 </li>
 <li>
-<p class="itemTitle">Atmosphere-supplying Respirators</p>
+<p class="folderTitle">Atmosphere-supplying Respirators</p>
 <p class="itemText">&lt;figure xml:id="fig_respirators"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Atmosphere-supplying respirators<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;sidebyside width ="33%" valign="middle"&gt;</span></p></p>
@@ -791,15 +782,15 @@
 <li>
 <p class="itemTitle">General Purpose</p>
 <p class="itemText">Rulers and Yardsticks<span class="Apple-converted-space">  </span>are straight, flat measuring tools commonly used for shorter lengths. A ruler measure 1 ft. or 12 inches whereas a yardstick measure 3 ft. or 1 yd.</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">#</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;image width="50%" source="images/ruler.png"/&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;image<span class="Apple-converted-space">  </span>width="50%" source="images/yardstick.png"/&gt;</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">#</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">A Tape Measure is a flexible tape marked with inches and feet for measuring longer distances. It is often used in construction and carpentry.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"><span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>#</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;image width="50%"<span class="Apple-converted-space">  </span>source="images/tapemeasure.png"/&gt;</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Calipers or callipers are us...</p>
+<p class="itemText"><p class="p1"><span class="s1">Calipers or callipers are...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -1076,10 +1067,10 @@
 <ul>
 <li>
 <p class="itemTitle">objectives</p>
-<p class="itemText">&lt;url href="/&gt;stcw/2023/tables/31.html#OICEW-B2.4" visual="OICEW-B2.4"/&gt; Construction of electrical testing and measuring equipment</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;url href="/&gt;stcw/2023/tables/31.html#OICEW-B2.4" visual="OICEW-B2.4"/&gt; Operation of electrical testing and measuring equipment</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;url href="/&gt;stcw/2023/tables/31.html#OICEW-B2.6" visual="OICEW-B2.6"/&gt; The interpretation of electrical and simple electronic diagrams</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;url href="/&gt;stcw/2023/tables/31.html#OICEW-B1.1" visual="OICEW-B1.1"/&gt; Basic configuration and operation...</p>
+<p class="itemText">&lt;url href="https://weh.maritime.edu/stcw/2023/tables/31.html#OICEW-B2.4" visual="OICEW-B2.4"/&gt; Construction of electrical testing and measuring equipment</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;url href="https://weh.maritime.edu/stcw/2023/tables/31.html#OICEW-B2.4" visual="OICEW-B2.4"/&gt; Operation of electrical testing and measuring equipment</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;url href="https://weh.maritime.edu/stcw/2023/tables/31.html#OICEW-B2.6" visual="OICEW-B2.6"/&gt; The interpretation of electrical and simple electronic diagrams</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;url href="https://weh.maritime.edu/...</p>
 </li>
 <li>
 <p class="itemTitle">introduction</p>
