add Feedback link to publication.ptx

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -792,15 +792,15 @@
 <li>
 <p class="itemTitle">General Purpose</p>
 <p class="itemText">Rulers and Yardsticks<span class="Apple-converted-space">  </span>are straight, flat measuring tools commonly used for shorter lengths. A ruler measure 1 ft. or 12 inches whereas a yardstick measure 3 ft. or 1 yd.</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">#</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;image width="50%" source="images/ruler.png"/&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;image<span class="Apple-converted-space">  </span>width="50%" source="images/yardstick.png"/&gt;</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">#</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">A Tape Measure is a flexible tape marked with inches and feet for measuring longer distances. It is often used in construction and carpentry.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"><span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>#</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;image width="50%"<span class="Apple-converted-space">  </span>source="images/tapemeasure.png"/&gt;</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Calipers or callipers are us...</p>
+<p class="itemText"><p class="p1"><span class="s1">Calipers or callipers are...</p>
 </li>
 </ul>
 <hr class="afterText"/>
