Fix Diesel Generator Description

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -2925,7 +2925,7 @@
 <ul>
 <li>
 <p class="itemTitle">Introducton</p>
-<p class="itemText">Four 4000 kW, 6600 volt, three-phase generators provide electrical power for propulsion and for all other normal ship’s requirements.<span class="Apple-converted-space">  </span>The generators are directly driven by 6-cylinder, 4-stroke, 4200 kW diesel engines.<span class="Apple-converted-space">  </span>Since the generators have eight poles, when driven at 900 rpm they produce 60 Hz AC <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText">Four 4000 kW, 6600 volt, three-phase generators provide electrical power for propulsion and for all other normal ship’s requirements.<span class="Apple-converted-space">  </span>Each generator is directly driven by a 16-cylinder, 4-stroke, 4200 kW diesel engine.<span class="Apple-converted-space">  </span>Since the generators have eight poles, when driven at 900 rpm they produce 60 Hz AC.</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;table xml:id="generator_specs" &gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;title&gt;Main Generator Specifications&lt;/title&gt;&lt;tabular&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;col width="30%"/&gt;&lt;col width="30%"/&gt;</span></p></p>
