Latest build deployed.

--- a/knowl/generator_specs.html
+++ b/knowl/generator_specs.html
@@ -26,7 +26,7 @@
 </tr>
 <tr>
 <td class="l m b0 r0 l0 t0 lines">Rated Output</td>
-<td class="l m b0 r0 l0 t0 lines">5066.25vkVA / 4053kW</td>
+<td class="l m b0 r0 l0 t0 lines">5066 kVA / 4053 kW</td>
 </tr>
 <tr>
 <td class="l m b0 r0 l0 t0 lines">Rated Voltage</td>
@@ -50,11 +50,11 @@
 </tr>
 <tr>
 <td class="l m b0 r0 l0 t0 lines">Excitation voltage</td>
-<td class="l m b0 r0 l0 t0 lines">60V DC</td>
+<td class="l m b0 r0 l0 t0 lines">60 V DC</td>
 </tr>
 <tr>
 <td class="l m b0 r0 l0 t0 lines">Excitation current</td>
-<td class="l m b0 r0 l0 t0 lines">4A DC</td>
+<td class="l m b0 r0 l0 t0 lines">4 A DC</td>
 </tr>
 </table></div></figure><span class="incontext"><a class="internal" href="ships-generators.html#generator_specs">in-context</a></span>
 </body>
