--- a/pressurereliefvalves.html
+++ b/pressurereliefvalves.html
@@ -528,11 +528,11 @@ P_o A_o = P_c A_c
 </h2>
 <div class="para" id="p-903">A relief valve opens at 250 psi and has a bottom surface area when closed of 0.75 <span class="process-math">\(\text{in}^2\text{.}\)</span> When the valve opens, the bottom surface area increases by 10%.     What pressure does the valve close at?</div>
 <div class="solutions">
-<details id="answer-9" class="answer solution-like"><summary><span class="type">Answer</span><span class="period">.</span></summary><div class="answer solution-like"><div class="para logical" id="p-904"><div class="displaymath process-math">
+<details id="answer-9" class="answer solution-like born-hidden-knowl"><summary><span class="type">Answer</span><span class="period">.</span></summary><div class="answer solution-like"><div class="para logical" id="p-904"><div class="displaymath process-math">
 \begin{equation*}
 P_c = 227 \text{ psi}
 \end{equation*}
-</div></div></div></details><details id="solution-10" class="solution solution-like"><summary><span class="type">Solution</span><span class="period">.</span></summary><div class="solution solution-like"><div class="para logical" id="p-905"><div class="displaymath process-math" id="md-12">
+</div></div></div></details><details id="solution-10" class="solution solution-like born-hidden-knowl"><summary><span class="type">Solution</span><span class="period">.</span></summary><div class="solution solution-like"><div class="para logical" id="p-905"><div class="displaymath process-math" id="md-12">
 \begin{align*}
 P_o A_o &amp;= P_c A_c \\
 250 (0.75) &amp;= P_c (1.1) (0.75)\\
