--- a/ships-generators.html
+++ b/ships-generators.html
@@ -494,7 +494,7 @@ window.MathJax = {
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="ships-generators"><h2 class="heading hide-type">
 <span class="type">Section</span><span class="space"> </span><span class="codenumber">8.2</span><span class="space"> </span><span class="title">Generators</span>
 </h2>
-<section class="introduction" id="introduction-31"><div class="para" id="p-1085">Four 4000 kW, 6600 volt, three-phase generators provide electrical power for propulsion and for all other normal ship’s requirements.  The generators are directly driven by 6-cylinder, 4-stroke, 4200 kW diesel engines.  Since the generators have eight poles, when driven at 900 rpm they produce 60 Hz AC</div> <figure class="table table-like" id="generator_specs"><figcaption><span class="type">Table</span><span class="space"> </span><span class="codenumber">8.2.1<span class="period">.</span></span><span class="space"> </span>Main Generator Specifications</figcaption><div class="tabular-box natural-width"><table class="tabular">
+<section class="introduction" id="introduction-31"><div class="para" id="p-1085">Four 4000 kW, 6600 volt, three-phase generators provide electrical power for propulsion and for all other normal ship’s requirements.  Each generator is directly driven by a 16-cylinder, 4-stroke, 4200 kW diesel engine.  Since the generators have eight poles, when driven at 900 rpm they produce 60 Hz AC.</div> <figure class="table table-like" id="generator_specs"><figcaption><span class="type">Table</span><span class="space"> </span><span class="codenumber">8.2.1<span class="period">.</span></span><span class="space"> </span>Main Generator Specifications</figcaption><div class="tabular-box natural-width"><table class="tabular">
 <tr>
 <td class="l m b0 r0 l0 t0 lines">Manufacturer</td>
 <td class="l m b0 r0 l0 t0 lines">Hyundai</td>
@@ -509,7 +509,7 @@ window.MathJax = {
 </tr>
 <tr>
 <td class="l m b0 r0 l0 t0 lines">Rated Output</td>
-<td class="l m b0 r0 l0 t0 lines">5066.25vkVA / 4053kW</td>
+<td class="l m b0 r0 l0 t0 lines">5066 kVA / 4053 kW</td>
 </tr>
 <tr>
 <td class="l m b0 r0 l0 t0 lines">Rated Voltage</td>
@@ -533,11 +533,11 @@ window.MathJax = {
 </tr>
 <tr>
 <td class="l m b0 r0 l0 t0 lines">Excitation voltage</td>
-<td class="l m b0 r0 l0 t0 lines">60V DC</td>
+<td class="l m b0 r0 l0 t0 lines">60 V DC</td>
 </tr>
 <tr>
 <td class="l m b0 r0 l0 t0 lines">Excitation current</td>
-<td class="l m b0 r0 l0 t0 lines">4A DC</td>
+<td class="l m b0 r0 l0 t0 lines">4 A DC</td>
 </tr>
 </table></div></figure> <div class="para" id="p-1086"></div></section><nav class="summary-links"><ul>
 <li><a href="description_generators.html" class="internal"><span class="codenumber">8.2.1</span> <span class="title">Description</span></a></li>
