--- a/knowl/p-1085.html
+++ b/knowl/p-1085.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h1 class="heading"><span class="type">Paragraph</span></h1>
-<div class="para">Four 4000 kW, 6600 volt, three-phase generators provide electrical power for propulsion and for all other normal ship’s requirements.  The generators are directly driven by 6-cylinder, 4-stroke, 4200 kW diesel engines.  Since the generators have eight poles, when driven at 900 rpm they produce 60 Hz AC</div>
+<div class="para">Four 4000 kW, 6600 volt, three-phase generators provide electrical power for propulsion and for all other normal ship’s requirements.  Each generator is directly driven by a 16-cylinder, 4-stroke, 4200 kW diesel engine.  Since the generators have eight poles, when driven at 900 rpm they produce 60 Hz AC.</div>
 <span class="incontext"><a class="internal" href="ships-generators.html#p-1085">in-context</a></span>
 </body>
 </html>
