Add Temperature Images

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -842,6 +842,82 @@
 
 </li>
 </ul>
+<hr class="afterText"/>
+
+<li>
+<p class="folderTitle">Temperature</p>
+</li>
+<hr class="afterTitle"/>
+<ul>
+<li>
+<p class="folderTitle">TEMPERATURE: An Introduction</p>
+<p class="itemText">&lt;!-- TODO Replace all illustrations in this section with non copyright images --&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;term&gt;Temperature&lt;/term&gt; is a measure of the average kinetic energy of the particles in a substance. It quantifies how hot or cold an object or environment is relative to a standard or reference point.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The most commonly used temperature scale in the US today is the &lt;term&gt;Fahrenheit scale&lt;/term&gt;, abbreviated F. In this scale, water freezes at 32 degrees and boils at 212 degrees. (This only holds strictly when atmosp...</p>
+</li>
+<li>
+<p class="folderTitle">Instruments Used to Measure Temperature</p>
+<p class="itemText">Various instruments are used to measure temperature in different applications. The choice of temperature measurement instrument depends on factors such as the required accuracy, temperature range, and the specific application or industry. Different instruments are suitable for different temperature ranges and environments.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Here are some common instruments used to measure temperature:</p>
+</li>
+<hr class="afterText"/>
+<ul>
+<li>
+<p class="folderTitle">Liquid in Glass Thermometer</p>
+<p class="itemText">Liquid in glass thermometers are the most common instruments for measuring temperature.<span class="Apple-converted-space">  </span>This type of thermometer uses a temperature sensitive liquid, such as mercury or alcohol, sealed in a glass tube. The liquid expands or contracts with temperature changes, and the temperature is read from a scale on the thermometer.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image source="images/temperature-image2.png"<span class="Apple-converted-space">  </span>width="40%"/&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Liquid in Glass Thermometer&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
+</li>
+<li>
+<p class="folderTitle">Bimetallic temperature sensors</p>
+<p class="itemText">Bimetallic temperature sensors use the differential expansion of two metals to detect temperature changes. These are often used in thermostats and mechanical temperature gauges.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image source="images/temperature-image3.png"<span class="Apple-converted-space">  </span>width="30%"/&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Bimetallic Thermometer Temperature Sensor&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
+</li>
+<li>
+<p class="folderTitle">Thermocouple</p>
+<p class="itemText">Thermocouple are made from two different metal wires joined at one end. When exposed to temperature variations, it generates a small electrical voltage proportional to the temperature difference.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image source="images/temperature-image4.png"<span class="Apple-converted-space">  </span>width="60%"/&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Thermocouple Temperature Sensor&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
+</li>
+<li>
+<p class="folderTitle">Resistance Temperature Detector</p>
+<p class="itemText">Resistance Temperature Detectors (RTD) determine temperature by measuring the resistance of an electrical wire, which increases as the temperature rises and decreases when the temperature falls. The change in resistance of the wire indicates the temperature change.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image source="images/temperature-image5.jpg"<span class="Apple-converted-space">  </span>width="40%"/&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Resistance Temperature Detector RTD &lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
+</li>
+<li>
+<p class="folderTitle">Thermistor</p>
+<p class="itemText">Thermistors are a type of temperature-sensitive resistor whose electrical resistance changes significantly with temperature. They are commonly used in electronic devices and temperature control systems.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image source="images/temperature-image6.gif"<span class="Apple-converted-space">  </span>width="40%"/&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Thermistor&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
+</li>
+<li>
+<p class="folderTitle">Infrared (IR) Thermometer</p>
+<p class="itemText">An Infrared (IR) thermometer measures temperature without direct contact with the object. It detects the infrared radiation emitted by the object, converting it into a temperature reading. IR thermometers are particularly useful for non-contact measurements or in hazardous environments.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image source="images/temperature-image7.jpg"<span class="Apple-converted-space">  </span>width="40%"/&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Infrared Thermometer&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
+</li>
+</ul>
+</ul>
 </ul>
 </ul>
 <hr class="afterText"/>
