Edit Diesel section

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -2788,10 +2788,9 @@
 <p class="folderTitle">History of the Internal Combustion Engine</p>
 <p class="itemText">&lt;figure&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption&gt; Nicolaus Otto (1832)&lt;/caption&gt;<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;image source="images/diesel-image3.png" width="50%"/&gt;<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;image source="images/diesel-image3.png" width="25%"/&gt;<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Born in 1832 in Germany, Nicolaus August Otto invented the first practical alternative to the steam engine - the first successful four-stroke cycle engine. Otto built his first four-stroke engine in 1861. Then, in partnership with German industrialist Eugen Langen, they improved the design and won a gold medal at the World Exposition in Paris of 1867.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">In 1876, Otto, then a t...</p>
+<p class="itemText"><p class="p1"><span class="s1">The first practical alternative to the steam engine was invented in 1861 Nicolaus August Otto. Later, in partnership with German industrialist Eugen Langen, they improved the design and won a gold medal at the World Exposition in Paris of 1867.<span class="Apple-converted-space">  </span>In 1876, Otto, then a traveling salesman, chanced upon a newspaper account of the Lenoir internal combustion engine. Before year's e...</p>
 </li>
 <li>
 <p class="folderTitle">The Basic Diesel Cycle</p>
@@ -2800,7 +2799,13 @@
 <ul>
 <li>
 <p class="itemTitle">Introduction</p>
-<p class="itemText">All diesel engines fall into one of two categories, two-stroke or four-stroke cycle engines. The word cycle refers to any operation or series of events that repeats itself. In the case of a four stroke cycle engine, the engine requires four strokes of the piston (intake, compression, power, and exhaust) to complete one full cycle. Therefore, it requires two rotations of the crankshaft, or 720° of crankshaft rotation (360° x 2) to complete one cycle. In a two-stroke cycle engine the events (intak...</p>
+<p class="itemText"></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">   </span>&lt;caption&gt;Conversion of Pressure to Rotating force&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;image source="images/diesel-image2.png" width="50%"/&gt;<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">A diesel engine converts the energy stored in the fuel's chemical bonds into mechanical energy by burning the fuel. The chemical reaction of burning the fuel liberates heat and causes the gasses to expand and force he piston down, creating torque which rotates the crankshaft and drives the load.<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">All diesel engines fall into one of two categories, two-strok...</p>
 </li>
 <li>
 <p class="folderTitle">Four Stroke Cycle</p>
@@ -2879,7 +2884,7 @@
 </li>
 <li>
 <p class="folderTitle">Engine Displacement</p>
-<p class="itemText">Engine displacement is one of the terms used to compare one engine to another. Displacement refers to the total volume displaced by all the pistons during one stroke. The displacement is usually given in cubic inches or liters. To calculate the displacement of an engine, the volume of one cylinder must be determined (volume of a cylinder = (πr2)h where h = the stroke). The volume of one cylinder is multiplied by the number of cylinders to obtain the total engine displacement.</p>
+<p class="itemText">Engine displacement is one of the terms used to compare one engine to another. Displacement refers to the total volume displaced by all the pistons during one stroke. The displacement is usually given in cubic inches or liters. To calculate the displacement of an engine, the volume of one cylinder must be determined (volume of a cylinder = (πr^2)h where h = the stroke). The volume of one cylinder is multiplied by the number of cylinders to obtain the total engine displacement.</p>
 </li>
 <li>
 <p class="folderTitle">Degree of Crankshaft Rotation</p>
