--- a/unit-factor-method.html
+++ b/unit-factor-method.html
@@ -699,7 +699,7 @@ window.MathJax = {
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="subsection" id="unit-factor-method"><h2 class="heading hide-type">
 <span class="type">Subsection</span><span class="space"> </span><span class="codenumber">2.1.1</span><span class="space"> </span><span class="title">Unit-factor Method</span>
 </h2>
-<div class="para" id="unit-factor-method-2">The <dfn class="terminology">unit-factor method</dfn> or the <dfn class="terminology">unity bracket method</dfn> is a widely used metod for unit conversions using the rules of algebra. This method utilizes the fact that any number or expression can be multiplied by one (unity) without changing its value.  The advantage of this method is that it explicitly accounts for units, rather than treating a conversion factor as a <em class="emphasis">magic number</em>.</div>
+<div class="para" id="unit-factor-method-2">The <dfn class="terminology">unit-factor method</dfn> or the <dfn class="terminology">unity bracket method</dfn> is a widely used method for unit conversions using the rules of algebra. This method utilizes the fact that any number or expression can be multiplied by one (unity) without changing its value.  The advantage of this method is that it explicitly accounts for units, rather than treating a conversion factor as a <em class="emphasis">magic number</em>.</div>
 <div class="para" id="unit-factor-method-3">To use this method, conversion factors are expressed as fraction equal to <em class="emphasis">one</em>, and multiplied against the original value while keeping careful track of the units in each term. Multiplying a value by a unit-factor and canceling any dimensional units appearing in both the numerator and denominator will express the original quantity in different units.</div>
 <div class="para logical" id="unit-factor-method-4">
 <div class="para">For example, since <span class="process-math">\(\inch{1} = \cm{2.54}\text{,}\)</span> dividing both sides by <span class="process-math">\(\inch{1}\)</span> inch gives the unit-factor</div>
@@ -708,6 +708,7 @@ window.MathJax = {
 1 = \left[\frac{\cm{2.54}}{\inch{1}}\right]\text{.}
 \end{equation*}
 </div>
+<div class="para">The fraction bar in this term can be read as “per”, so this unit-factor says that there are “2.54 centimeters per inch”.</div>
 </div>
 <div class="para" id="unit-factor-method-5">To convert <span class="process-math">\(36\)</span> inches to cm, just multiply by <span class="process-math">\(36\)</span> inches by the appropriate unit-factor, and cancel the inch units that appear in both the numerator and denominator.</div>
 <div class="para logical" id="unit-factor-method-6"><div class="displaymath process-math">
