Latest build deployed.

--- a/engineering-measurement-area-units.html
+++ b/engineering-measurement-area-units.html
@@ -703,17 +703,17 @@ window.MathJax = {
 <div class="para" id="engineering-measurement-area-units-3">Here are some basic relations between area units in the US Customary and the SI systems of units:</div>
 <div class="para logical" id="engineering-measurement-area-units-4"><div class="displaymath process-math" id="engineering-measurement-area-units-4-1">
 \begin{align*}
-\inch{1}^2 \amp= \inch{1} \times \inch{1}\\
-\ft{1}^2 \amp= \inch{144}^2 \\
-\yd{1}^1 \amp = \ft{9}^2\\
-\mi{1}^2 \amp= 27,878,400 \ft{9}^2 = \yd{3,097,600}^2\\
-1 \mathrm{\ acre} \amp= \ft{43,560}^2 = \yd{4,840}^2\\
+\inch{1}^2   \amp= \inch{1} \times \inch{1}\\
+\ft{1}^2   \amp= \inch{144}^2 \\
+\yd{1}^1   \amp = \ft{9}^2\\
+\mi{1}^2   \amp= 27,878,400 \ft{9}^2 = \yd{3,097,600}^2\\
+1 \mathrm{\ acre}   \amp= \ft{43,560}^2  = \yd{4,840}^2\\
 \amp \\
-\m{1}^2 \amp = \m{1} \times \m{1}\\
-\cm{1}^2 \amp = \m{1/10,000}^2 \\
-\mm{1}^2 \amp = \m{1/1,000,000}^2\\
-\km{1}^2 \amp = \m{1,000,000}^2\\
-1 \mathrm{\ hectare} \amp = \m{10,000}^2 = \km{0.01}^2
+\m{1}^2 \amp =  \m{1} \times \m{1}\\
+\cm{1}^2 \amp =  \m{1/10,000}^2 \\
+\mm{1}^2 \amp =  \m{1/1,000,000}^2\\
+\km{1}^2 \amp =  \m{1,000,000}^2\\
+1 \mathrm{\ hectare} \amp =  \m{10,000}^2  =  \km{0.01}^2
 \end{align*}
 </div></div>
 <div class="para" id="engineering-measurement-area-units-5">To convert areas between the US and SI systems, use the <a href="unit-factor-method.html" class="internal" title="Subsection 2.1.1: Unit-factor Method">Unit-factor method 2.1.1</a>, as shown in the examples below:</div>
@@ -729,11 +729,14 @@ A = \m{1}^2 = \ft{10.76}^2
 </div></div></div></details><details id="engineering-measurement-example-area-conversion-1-4" class="solution solution-like born-hidden-knowl"><summary><span class="type">Solution</span><span class="period">.</span></summary><div class="solution solution-like">
 <div class="para logical" id="engineering-measurement-example-area-conversion-1-4-1"><div class="displaymath process-math" id="engineering-measurement-example-area-conversion-1-4-1-1">
 \begin{align*}
-A \amp = \m{1}^2 \times \left[\frac{\ft{1}}{\m{0.3048}}\right] \left[\frac{\ft{1}}{\m{0.3048}}\right]\\
-A \amp = \m{1}^2 \times \left[\frac{\ft{1}}{\m{0.3048}}\right]^2 \\
-\amp= \ft{10.76}^2 
+A  \amp =  \m{1}^2 \times 
+\left[\frac{\ft{1}}{\m{0.3048}}\right] 
+\left[\frac{\ft{1}}{\m{0.3048}}\right]\\
+A  \amp =  \m{1}^2 \times 
+\left[\frac{\ft{1}}{\m{0.3048}}\right]^2 \\
+\amp=  \ft{10.76}^2  
 \end{align*}
-</div></div> <div class="para" id="engineering-measurement-example-area-conversion-1-4-2">Note that you must perform the meter to feet conversion twice, once for each meter quantity in the original area.</div>
+</div></div> <div class="para" id="engineering-measurement-example-area-conversion-1-4-2">Note that you must perform the meter to feet conversion twice,  once for each meter quantity in the original area.</div>
 </div></details>
 </div></article><article class="example example-like" id="engineering-measurement-example-area-conversion-2"><h3 class="heading">
 <span class="type">Example</span><span class="space"> </span><span class="codenumber">2.2.14</span><span class="period">.</span><span class="space"> </span><span class="title">Area Conversion 2.</span>
@@ -742,15 +745,18 @@ A \amp = \m{1}^2 \times \left[\frac{\ft{1}}{\m{0.3048}}\right]^2 \\
 <div class="solutions">
 <details id="engineering-measurement-example-area-conversion-2-3" class="answer solution-like born-hidden-knowl"><summary><span class="type">Answer</span><span class="period">.</span></summary><div class="answer solution-like"><div class="para logical" id="engineering-measurement-example-area-conversion-2-3-1"><div class="displaymath process-math">
 \begin{equation*}
-A = \mi{2.5}^2 = \km{6.47}^2
+A = \mi{2.5}^2  = \km{6.47}^2
 \end{equation*}
 </div></div></div></details><details id="engineering-measurement-example-area-conversion-2-4" class="solution solution-like born-hidden-knowl"><summary><span class="type">Solution</span><span class="period">.</span></summary><div class="solution solution-like">
 <div class="para logical" id="engineering-measurement-example-area-conversion-2-4-1"><div class="displaymath process-math" id="engineering-measurement-example-area-conversion-2-4-1-1">
 \begin{align*}
-A \amp = \mi{2.5}^2 \times \left[\frac{\ft{5280}}{\mi{1}}\right]^2 \left[\frac{\m{0.3048}}{\ft{1}}\right]^2 \left[\frac{\km{1}^2}{\m{10^6}^2}\right]\\
-\amp= \km{6.47}^2 
+A  \amp =  \mi{2.5}^2 \times 
+\left[\frac{\ft{5280}}{\mi{1}}\right]^2
+\left[\frac{\m{0.3048}}{\ft{1}}\right]^2 
+\left[\frac{\km{1}^2}{\m{10^6}^2}\right]\\
+\amp=  \km{6.47}^2  
 \end{align*}
-</div></div> <div class="para" id="engineering-measurement-example-area-conversion-2-4-2">Note that you must perform the meter to feet conversion twice, once for each meter quantity in the original area..</div>
+</div></div> <div class="para" id="engineering-measurement-example-area-conversion-2-4-2">Note that you must perform the meter to feet conversion twice,  once for each meter quantity in the original area..</div>
 </div></details>
 </div></article></section></div>
 <div class="ptx-content-footer">
