--- a/diesel-power-the-diesel-cycle-2-2-2-2.html
+++ b/diesel-power-the-diesel-cycle-2-2-2-2.html
@@ -13,6 +13,7 @@
 <meta property="og:type" content="book">
 <meta property="og:image" content="https://whaynes.github.io/IME/external/images/mma_logo.svg">
 <meta property="book:title" content="Introduction to Marine Engineering">
+<meta property="book:author" content="Massachusetts Maritime Academy">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="_static/pretext/js/lib/jquery.min.js"></script><script src="_static/pretext/js/lib/jquery.sticky.js"></script><script src="_static/pretext/js/lib/jquery.espy.min.js"></script><script src="_static/pretext/js/pretext.js"></script><script src="_static/pretext/js/pretext_add_on.js?x=1"></script><script src="_static/pretext/js/user_preferences.js"></script><script src="_static/pretext/js/lib/knowl.js"></script><!--knowl.js code controls Sage Cells within knowls--><script>sagecellEvalName='Evaluate (Sage)';
 </script><link rel="preconnect" href="https://fonts.googleapis.com">
@@ -113,7 +114,7 @@
 <header id="ptx-masthead" class="ptx-masthead"><div class="ptx-banner">
 <a id="logo-link" class="logo-link" target="_blank" href="https://www.maritime.edu"><img src="external/images/mma_logo.svg" alt="Logo image"></a><div class="title-container">
 <h1 class="heading"><a href="root-1-2.html"><span class="title">Introduction to Marine Engineering</span></a></h1>
-<p class="byline"></p>
+<p class="byline">Massachusetts Maritime Academy</p>
 </div>
 </div></header><div class="ptx-page"><main class="ptx-main"><div id="ptx-content" class="ptx-content" style="max-width: 1600px"><iframe id="diesel-power-the-diesel-cycle-2-2-2-2" width="150" height="300" src="diesel-power-the-diesel-cycle-2-2-2-2-if.html"></iframe></div></main></div>
 </body>
