--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -830,8 +830,7 @@
 <li>
 <p class="itemTextStart">The table below contains a large number of values that can be used to make unit-factors.<span class="Apple-converted-space">   </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">For example, the first entry says: &lt;me&gt;\mathrm{acre} \qquad 43560 \qquad<span class="Apple-converted-space">  </span>\ft{}^2&lt;/me&gt; The associated unit factors are &lt;me&gt; 1 = \left[\frac{ \mathrm{1 \ acre}}{\ft{43560}^2}\right] \quad \text{ or } \quad 1 = \left[\frac{\ft{43560}^2}{\mathrm{1\ acre}}\right]&lt;/me&gt;.<span class="Apple-converted-space">  </span>Multiplying a quantity by one of these factors will convert acres to square feet, or vice-versa.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;figure landscape="yes"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Conversion...</p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="conversion-factor-pdf" lands...</p>
 </li>
 </ul>
 </ul>
@@ -3999,8 +3998,6 @@
 <p class="itemTitle">Individual Pump Injection System</p>
 <p class="itemText">Individual-pump injection systems of the original jerk pump, or basic, type include high-pressure pumps and pressure-operated nozzles which are separate units. In some engines, only one pump and nozzle are provided for each cylinder. In other engines, such as the Fairbanks Morse, each cylinder is provided with two pumps and two nozzles.</p>
 </li>
-<hr class="afterText"/>
-<ul>
 <li>
 <p class="itemTitle">Type APF</p>
 <p class="itemText">Type APF pumps are of single-cylinder design, the plunger pump for each cylinder being in a separate housing. In a 6-cylinder engine, for example, there are six separate APF pumps. Each pump is cam-driven and regulated by an individual control rack.</span></p></p>
@@ -4032,7 +4029,6 @@
 <p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"></p>
 </li>
-</ul>
 </ul>
 <hr class="afterText"/>
 
